front modules have been added, several fixes